fix: z-index

--- a/packages/raystack/v1/styles/primitives/z-index.css
+++ b/packages/raystack/v1/styles/primitives/z-index.css
@@ -6,21 +6,21 @@
  */
 
 :root {
-    /* Base layers */
-    --rs-z-index-base: 0;
-    --rs-z-index-above: 1;
-    --rs-z-index-below: -1;
+  /* Base layers */
+  --rs-z-index-base: 0;
+  --rs-z-index-above: 1;
+  --rs-z-index-below: -1;
 
-    --rs-z-index-overlay: 50;
+  --rs-z-index-overlay: 100;
 
-    --rs-z-index-sheet: 60;
-    --rs-z-index-drawer: 60;
+  --rs-z-index-sheet: 100;
+  --rs-z-index-drawer: 100;
 
-    --rs-z-index-dialog: 70;
+  --rs-z-index-dialog: 100;
 
-    --rs-z-index-dropdown: 80;
-    --rs-z-index-select: 80;
-    --rs-z-index-popover: 80;
-    
-    --rs-z-index-tooltip: 90;
+  --rs-z-index-dropdown: 100;
+  --rs-z-index-select: 100;
+  --rs-z-index-popover: 100;
+
+  --rs-z-index-tooltip: 100;
 }
